--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-<base href="/escola-al.github.io/chapa/">
+<base href="chapa">
 
 
   <meta charset="UTF-8">
@@ -30,7 +30,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>myapp</title>
+  <title>chapa</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
